Fixed display issue on Firefox for mobile number field

--- a/themes/evolve/lessc/Dashboard.less
+++ b/themes/evolve/lessc/Dashboard.less
@@ -279,6 +279,9 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none; 
   margin: 0; 
 }
+input[type=number] {
+    -moz-appearance:textfield;
+}
 .dashboard-button
 {
     background-color: #009fda;
